--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.2",
-	"appid": "wx20df405c13b18c68",
+	"appid": "wxc68246b8ae58a819",
 	"projectname": "Sumege",
 	"debugOptions": {
 		"hidedInDevtools": []
